# concept-datamodel

./: .editorconfig  .env.example  .gitignore  .mcp.json  .prettierignore  CLAUDE.md  LICENSE  README.md  eslint.config.mjs  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/commands/: cargo-check.md  db-migrate.md  db-studio.md  deploy.md  new-page.md
.github/: pull_request_template.md
.github/workflows/: build.yml  ci.yml  e2e.yml  preview.yml
claude/: README.md  claude_desktop_config.example.json
e2e/: home.spec.ts
prompts/: debugging-playbook.md  github-issue-pr-workflow.md  repo-onboarding.md
scripts/: setup-claude-mcp.sh
src/: env.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: project.rs
src-tauri/src/db/: connection.rs  models.rs
src/app/: App.tsx
src/components/command-palette/: CommandPalette.tsx
src/components/panels/: ProjectPanel.tsx
src/components/ui/: button.tsx
src/db/: index.ts  schema.ts
src/lib/: tauri.ts  utils.test.ts
src/stores/: project-store.ts  ui-store.ts
tests/lib/: utils.test.ts
